# RPiZeroW-ePaper-Display

./: .gitignore  Cargo.toml  README.md  release.sh
.cargo/: config.toml
config/: config.example.json
scripts/: build.sh  deploy.sh  install.sh
src/: config.rs  main.rs  scheduler.rs
src/display/: epd7in3e.rs  gpio.rs  mod.rs  spi.rs
src/image_proc/: dither.rs  download.rs  mod.rs  transform.rs
src/web/: mod.rs  routes.rs  templates.rs
systemd/: epaper-display.service
